# sn-p-factory

./: .gitignore  README.md  main.py  meta.py  meta_2.py  pyproject.toml  requirements.txt  snp.py  web.py
classes/: FileFormat.py  Neuron.py  Rule.py  System.py  SystemGenerator.py
data/json/: 4-neuron-bitonic-sorter-input-neuron.json  Thu May 19 2022 14_03_16 GMT+0800 (China Standard Time)-Neurons.json  bit-adder-0+0.json  bit-adder-0+1.json  bit-adder-10+11.json  bit-adder-10+3.json  bit-adder-100+10.json  bit-adder-100+2.json  bit-adder-13+13.json  bit-adder-2+3.json  bit-adder-20+30.json  bit-adder-20+5.json  bit-adder-25+12.json  bit-adder-4+4.json  bit-adder-4+8.json  bit-adder-5+9.json  bit-adder-7+11.json  bit-adder-input-neurons-0+0.json  bit-adder-input-neurons-0+1.json  bit-adder-input-neurons-10+11.json  bit-adder-input-neurons-10+3.json  bit-adder-input-neurons-100+10.json  bit-adder-input-neurons-100+2.json  bit-adder-input-neurons-13+13.json  bit-adder-input-neurons-2+3.json  bit-adder-input-neurons-20+30.json  bit-adder-input-neurons-20+5.json  bit-adder-input-neurons-25+12.json  bit-adder-input-neurons-4+4.json  bit-adder-input-neurons-4+8.json  (+40 more)
src/: globals.py  main.py  parsers.py  reads.py  utils.py  writes.py
tests/: test_get_python_regex.py  test_json_to_python_regex.py  test_parse_rule.py  test_parse_rule_xml.py  test_parse_rule_xmp.py  test_parse_xmp_rule.py  test_python_to_json_regex.py  test_python_to_xml_regex.py  test_python_to_xmp_regex.py  test_xml_to_python_regex.py  test_xmp_to_python_regex.py
utils/: logging.py  parsers.py  types.py
(+243 files in other folders)
