[project]
name = "sn-p-factory"
version = "0.1.0"
description = "Spiking Neural P system utilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "fastapi>=0.115.12",
    "pyyaml>=6.0.2",
    "termcolor>=2.5.0",
    "uvicorn[standard]>=0.34.0",
    "xmltodict>=0.14.2",
]
